--- a/NearbyAirports.xaml
+++ b/NearbyAirports.xaml
@@ -1,6 +1,8 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:model="clr-namespace:Lab6_Starter.Model"
+             x:DataType="model:BusinessLogic"
              x:Class="Lab6_Starter.NearbyAirports"
              Title="NearbyAirports">
     <VerticalStackLayout
@@ -35,5 +37,19 @@
                 FontSize="20"
             />
         </Grid>
+
+        <CollectionView x:Name="CV" ItemsSource="{Binding Airports}" SelectionMode="Single">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="model:Airport">
+                        <Grid RowDefinitions="*" ColumnDefinitions="*,*,*">
+                            <Label Grid.Column="0" Text="{Binding Id}" VerticalTextAlignment="Center"/>
+                            <Label Grid.Column="1" Text="{Binding City}" VerticalTextAlignment="Center"/>
+                            <Label Grid.Column="2" Text="{Binding DateVisited}" VerticalTextAlignment="Center" />
+                            
+                        </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+
     </VerticalStackLayout>
 </ContentPage>
