--- a/NearbyAirports.xaml
+++ b/NearbyAirports.xaml
@@ -103,6 +103,38 @@
         <Frame BorderColor="Black" Padding="5">
             <Grid ColumnDefinitions="*, *, *">
                 <StackLayout Grid.Column="0" Padding="10">
+                    <Label Text="ATW"></Label>
+                </StackLayout>
+
+                <StackLayout Grid.Column="1" Padding="10">
+                    <Label Text="Appleton"></Label>
+                </StackLayout>
+
+                <StackLayout Grid.Column="2" Padding="10" Margin="50, 0, 0, 0">
+                    <Label Text="30.0"></Label>
+                </StackLayout>
+            </Grid>
+        </Frame>
+
+        <Frame BorderColor="Black" Padding="5">
+            <Grid ColumnDefinitions="*, *, *">
+                <StackLayout Grid.Column="0" Padding="10">
+                    <Label Text="MKE"></Label>
+                </StackLayout>
+
+                <StackLayout Grid.Column="1" Padding="10">
+                    <Label Text="Milwaukee"></Label>
+                </StackLayout>
+
+                <StackLayout Grid.Column="2" Padding="10" Margin="50, 0, 0, 0">
+                    <Label Text="100.0"></Label>
+                </StackLayout>
+            </Grid>
+        </Frame>
+
+        <Frame BorderColor="Black" Padding="5">
+            <Grid ColumnDefinitions="*, *, *">
+                <StackLayout Grid.Column="0" Padding="10">
                     <Label Text="AUW"></Label>
                 </StackLayout>
 
@@ -116,20 +148,5 @@
             </Grid>
         </Frame>
 
-        <Frame BorderColor="Black" Padding="5">
-            <Grid ColumnDefinitions="*, *, *">
-                <StackLayout Grid.Column="0" Padding="10">
-                    <Label Text="ATW"></Label>
-                </StackLayout>
-
-                <StackLayout Grid.Column="1" Padding="10">
-                    <Label Text="Appleton"></Label>
-                </StackLayout>
-
-                <StackLayout Grid.Column="2" Padding="10" Margin="50, 0, 0, 0">
-                    <Label Text="30.0"></Label>
-                </StackLayout>
-            </Grid>
-        </Frame>
     </VerticalStackLayout>
 </ContentPage>
