--- a/NearbyAirports.xaml
+++ b/NearbyAirports.xaml
@@ -49,7 +49,7 @@
                 </StackLayout>
 
                 <StackLayout Grid.Column="2" Padding="10" Margin="50, 0, 0, 0">
-                    <Label Text="0.0"></Label>
+                    <Label Text="0.0 Miles"></Label>
                 </StackLayout>
             </Grid>
         </Frame>
@@ -65,7 +65,7 @@
                 </StackLayout>
 
                 <StackLayout Grid.Column="2" Padding="10" Margin="50, 0, 0, 0">
-                    <Label Text="30.0"></Label>
+                    <Label Text="30.0 Miles"></Label>
                 </StackLayout>
             </Grid>
         </Frame>
@@ -81,7 +81,7 @@
                 </StackLayout>
 
                 <StackLayout Grid.Column="2" Padding="10" Margin="50, 0, 0, 0">
-                    <Label Text="100.0"></Label>
+                    <Label Text="100.0 Miles"></Label>
                 </StackLayout>
             </Grid>
         </Frame>
@@ -97,7 +97,7 @@
                 </StackLayout>
 
                 <StackLayout Grid.Column="2" Padding="10" Margin="50, 0, 0, 0">
-                    <Label Text="100.0"></Label>
+                    <Label Text="100.0 Miles"></Label>
                 </StackLayout>
             </Grid>
         </Frame>
