--- a/NearbyAirports.xaml
+++ b/NearbyAirports.xaml
@@ -6,99 +6,71 @@
              x:Class="Lab6_Starter.NearbyAirports"
              Title="NearbyAirports">
     <VerticalStackLayout
-        Padding="25, 20"
-        Spacing="20"
-    >
+       Padding="25, 20"
+       Spacing="20"
+   >
         <Grid ColumnDefinitions=".25*, .5*" ColumnSpacing="-260">
             <Label
-                Grid.Column="0"
-                Text="Airport:"
-                FontSize="20"
-                VerticalOptions="Center"
-            />
+               Grid.Column="0"
+               Text="Airport:"
+               FontSize="20"
+               VerticalOptions="Center"
+           />
             <Entry
-                Grid.Column="1"
-                FontSize="20"
-                x:Name="airport_idENT"
-                Placeholder="Airport ID"
-                WidthRequest="135"
-            />
+               Grid.Column="1"
+               FontSize="20"
+               x:Name="airport_idENT"
+               Placeholder="Airport ID"
+               WidthRequest="135"
+           />
         </Grid>
         <Grid ColumnDefinitions="*, *" ColumnSpacing="-175">
             <Label
-                Grid.Column="0"
-                Text="Nearby"
-                FontSize="20"
-                VerticalOptions="Center"
-            />
+               Grid.Column="0"
+               Text="Nearby"
+               FontSize="20"
+               VerticalOptions="Center"
+           />
             <Label
-                Grid.Column="1"
-                Text="(close --> far)"
-                FontSize="20"
-            />
+               Grid.Column="1"
+               Text="(close → far)"
+               FontSize="20"
+           />
         </Grid>
 
-        <Frame BorderColor="Black" Padding="5">
-            <Grid ColumnDefinitions="*, *, *">
-                <StackLayout Grid.Column="0" Padding="10">
-                    <Label Text="OSH"></Label>
-                </StackLayout>
-
-                <StackLayout Grid.Column="1" Padding="10">
-                    <Label Text="Oshkosh"></Label>
-                </StackLayout>
-
-                <StackLayout Grid.Column="2" Padding="10" Margin="50, 0, 0, 0">
-                    <Label Text="0.0"></Label>
-                </StackLayout>
+        <Frame BorderColor="Black" Padding="15">
+            <Grid ColumnDefinitions=".5*, *, *, .25*">
+                <Label Text="OSH" Grid.Column="0" ></Label>
+                <Label Text="Oshkosh" Grid.Column="1"></Label>
+                <Label Text="0.0 Miles" Grid.Column="2"></Label>
+                <Label Text="✓" FontSize="15" Grid.Column="3"></Label>
             </Grid>
         </Frame>
 
-        <Frame BorderColor="Black" Padding="5">
-            <Grid ColumnDefinitions="*, *, *">
-                <StackLayout Grid.Column="0" Padding="10">
-                    <Label Text="ATW"></Label>
-                </StackLayout>
-
-                <StackLayout Grid.Column="1" Padding="10">
-                    <Label Text="Appleton"></Label>
-                </StackLayout>
-
-                <StackLayout Grid.Column="2" Padding="10" Margin="50, 0, 0, 0">
-                    <Label Text="30.0"></Label>
-                </StackLayout>
+        <Frame BorderColor="Black" Padding="15">
+            <Grid ColumnDefinitions=".5*, *, *, .25*">
+                <Label Text="ATW" Grid.Column="0"></Label>
+                <Label Text="Appleton" Grid.Column="1"></Label>
+                <Label Text="30.0 Miles" Grid.Column="2"></Label>
+                <Label Text="✓" FontSize="15"  Grid.Column="3"></Label>
             </Grid>
         </Frame>
 
-        <Frame BorderColor="Black" Padding="5">
-            <Grid ColumnDefinitions="*, *, *">
-                <StackLayout Grid.Column="0" Padding="10">
-                    <Label Text="MKE"></Label>
-                </StackLayout>
-
-                <StackLayout Grid.Column="1" Padding="10">
-                    <Label Text="Milwaukee"></Label>
-                </StackLayout>
-
-                <StackLayout Grid.Column="2" Padding="10" Margin="50, 0, 0, 0">
-                    <Label Text="100.0"></Label>
-                </StackLayout>
+        <Frame BorderColor="Black" Padding="15">
+            <Grid ColumnDefinitions=".5*, *, *, .25*">
+                <Label Text="MKE" Grid.Column="0"></Label>
+                <Label Text="Milwaukee" Grid.Column="1"></Label>
+                <Label Text="100.0 Miles" Grid.Column="2"></Label>
+                <Label Text="X" FontSize="15" Grid.Column="3"></Label>
             </Grid>
         </Frame>
 
-        <Frame BorderColor="Black" Padding="5">
-            <Grid ColumnDefinitions="*, *, *">
-                <StackLayout Grid.Column="0" Padding="10">
-                    <Label Text="AUW"></Label>
-                </StackLayout>
-
-                <StackLayout Grid.Column="1" Padding="10">
-                    <Label Text="Wausau"></Label>
-                </StackLayout>
-
-                <StackLayout Grid.Column="2" Padding="10" Margin="50, 0, 0, 0">
-                    <Label Text="100.0"></Label>
-                </StackLayout>
+        <Frame BorderColor="Black" Padding="15">
+            <Grid ColumnDefinitions=".5*, *, *, .25*">
+                <Label Text="AUW" Grid.Column="0"></Label>
+                <Label Text="Wausau" Grid.Column="1"></Label>
+                <Label Text="100.0 Miles" Grid.Column="2"></Label>
+                <Label Text="✓" FontSize="15" Grid.Column="3"></Label>
             </Grid>
         </Frame>
 
