--- a/RewardsPage.xaml
+++ b/RewardsPage.xaml
@@ -23,13 +23,18 @@
         <Label Grid.Row="1" Grid.Column="0" Text="Email" VerticalOptions="Center" FontSize="18" Margin="10,0,0,0" />
         <Entry Grid.Row="1" Grid.Column="1" Placeholder="Enter your email" Grid.ColumnSpan="2" Margin="10,0,10,10" />
 
-        <Label Grid.Row="2" Grid.Column="0" Text="City" VerticalOptions="Center" FontSize="18" Margin="10,0,0,0" />
-        <Entry Grid.Row="2" Grid.Column="1" Placeholder="Enter your city" Grid.ColumnSpan="2" Margin="10,0,10,10" />
+        <Label Grid.Row="2" Grid.Column="0" Text="Address" VerticalOptions="Center" FontSize="18" Margin="10,0,0,0" />
+        <Entry Grid.Row="2" Grid.Column="1" Placeholder="Enter your Address" Grid.ColumnSpan="2" Margin="10,0,10,10" />
 
-        <Label Grid.Row="3" Grid.Column="0" Text="State" VerticalOptions="Center" FontSize="18" Margin="10,0,0,0" />
-        <Entry Grid.Row="3" Grid.Column="1" Placeholder="Enter your state" Grid.ColumnSpan="2" Margin="10,0,10,10" />
+        <Label Grid.Row="3" Grid.Column="0" Text="City" VerticalOptions="Center" FontSize="18" Margin="10,0,0,0" />
+        <Entry Grid.Row="3" Grid.Column="1" Placeholder="Enter your city" Grid.ColumnSpan="2" Margin="10,0,10,10" />
 
-        <Label Grid.Row="4" Grid.Column="0" Text="Zip" VerticalOptions="Center" FontSize="18" Margin="10,0,0,0" />
-        <Entry Grid.Row="4" Grid.Column="1" Placeholder="Enter your zip" Grid.ColumnSpan="2" Margin="10,0,10,10" />
+        <Label Grid.Row="4" Grid.Column="0" Text="State" VerticalOptions="Center" FontSize="18" Margin="10,0,0,0" />
+        <Entry Grid.Row="4" Grid.Column="1" Placeholder="Enter your state" Grid.ColumnSpan="2" Margin="10,0,10,10" />
+
+        <Label Grid.Row="5" Grid.Column="0" Text="Zip" VerticalOptions="Center" FontSize="18" Margin="10,0,0,0" />
+        <Entry Grid.Row="5" Grid.Column="1" Placeholder="Enter your zip" Grid.ColumnSpan="2" Margin="10,0,10,10" />
     </Grid>
+
+    <Button IsEnabled="True" VerticalOptions="End" Text="Submit"/>
 </ContentPage>
